[package]
name = "activity-graph"
version = "0.2.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "Generates a visualization of your commit activity in a set of git repositories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
chrono = "0.4.11"
pathdiff = "0.2.0"
term_size = "*" # structopt uses some version of term size
lazy_static = "1.4.0"

rayon = { version = "1.3.0", optional = true }
hyper = { version = "0.13.5", optional = true }
tokio = { version = "*", optional = true, features = ["rt-threaded"] } # hyper provides version for tokio

[features]
default = ["rayon"]
server = ["hyper", "tokio"]
